# custconsole

./: .gitignore  .readthedocs.yml  LICENSE  NOTICE.md  README.md  UPDATE.md  main.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
custconsole/: __init__.py  custconsole.py  errors.py
custconsole.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
custconsole/docs/: conf.py  installation.rst  license.rst
custconsole/docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  license.doctree
custconsole/docs/_build/html/: genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js
custconsole/docs/_build/html/_sources/: index.rst.txt
custconsole/docs/_build/html/_static/: documentation_options.js
docs/: conf.py  docs.rst  index.rst  installation.rst
docs/_build/doctrees/: docs.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree
docs/_build/html/: docs.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/custconsole/: __init__.py  custconsole.py  errors.py
