[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custconsole"
description = "Create a customizable CLI for your application(s)."
version = "1.0.0"
authors = [
  {name = "Jordan Chesley", email = "jordan.r.chesley@gmail.com"}
]
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/JordanChesley/custconsole"